Updated  embedding handler and fixed issue with vector matching grabbing incorrect matches

--- a/LLama.Rag/LLama.Rag.csproj
+++ b/LLama.Rag/LLama.Rag.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\LLama\LLamaSharp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="SourceFiles\Embeddings\" />
+  </ItemGroup>
+
 </Project>
