--- a/LLama.Rag/LLama.Rag.csproj
+++ b/LLama.Rag/LLama.Rag.csproj
@@ -8,12 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.73" />
     <PackageReference Include="LLamaSharp" Version="0.21.0" />
     <PackageReference Include="LLamaSharp.Backend.Cuda11" Version="0.21.0" />
     <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.3" />
+    <PackageReference Include="PdfPig" Version="0.1.10" />
+    <PackageReference Include="Spectre.Console" Version="0.49.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,6 +25,7 @@
 
   <ItemGroup>
     <Folder Include="SourceFiles\Embeddings\" />
+    <Folder Include="SourceFiles\Documents\" />
   </ItemGroup>
 
 </Project>
